missed "turnaround" option

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                         <option value="" disabled selected>Choose your option</option>
                         <option value="20">1 Day</option>
                         <option value="5">2-3 Days</option>
+                        <option value="3">1 Week</option>
                         <option value="1">2 Weeks</option>
                         <option value="0">When it's ready</option>
                     </select>
