revisions option added for "none"

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                 <div class="input-field col s6">
                     <select class="quote-select">
                         <option value="" disabled selected>Choose your option</option>
+                        <option value="0">None</option>
                         <option value="2">5</option>
                         <option value="4">10</option>
                         <option value="4">15</option>
