--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 
         </div>
 
-        <div class="client-area">
+        <!-- <div class="client-area">
             <h1 class="client-work">QUOTE GENERATOR</h1>
             <h2> Get an estimate on your work item </h2>
-        </div>
+        </div> -->
 
-        <div class="quote-area">
+        <!-- <div class="quote-area">
             <div class="row">
                 <div class="input-field col s6">
                     <select class="quote-select">
@@ -195,7 +195,7 @@
 
         <h3 id="result"></h3>
 
-        </div>
+        </div> -->
     </main>
 
     <script src="js/jquery.js"></script>
