--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="video-grid">
             <div class="row">
                 <div class="video-container col s6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Hz8angf7Jls"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/0fHKACcBI0w"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="video-container col s6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Rd58eC9gGLE"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/RQddWKQRDe4"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
@@ -64,7 +64,7 @@
 
             <div class="row">
                 <div class="video-container col s6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/-zbfgaz927g"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Z3jc1GWsNtM"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
