Updated background animated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Freelance editor tailored to influencers. My work speaks for itself.">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -201,6 +201,38 @@
     <script src="js/jquery.js"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/custom.js"></script>
+
+    <!-- <script src="js/three.min.js"></script> -->
+    <!-- <script src="js/vanta.dots.min.js"></script> -->
+    <!-- <script>
+        VANTA.DOTS({
+          el: "body",
+          mouseControls: true,
+          touchControls: true,
+          gyroControls: true,
+          minHeight: 400.00,
+          minWidth: 200.00,
+          scale: 1.20,
+          scaleMobile: 1.00
+        })
+        </script> -->
+
+    <script src="js/p5.min.js"></script>
+    <script src="js/vanta.topology.min.js"></script>
+    <script>
+        VANTA.TOPOLOGY({
+            el: "body",
+            mouseControls: true,
+            touchControls: true,
+            gyroControls: false,
+            minHeight: 200.00,
+            minWidth: 200.00,
+            scale: 1.00,
+            scaleMobile: 1.00,
+            color: 0x016c78,
+            backgroundColor: 0x0
+        })
+    </script>
 </body>
 
 </html>
