Update header text stuff

--- a/index.html
+++ b/index.html
@@ -32,18 +32,22 @@
         </header>
 
         <div class="text-container">
-            <p>
+            <p class="title-item quote">
                 "It's hard for people to understand editing, I think. It's absolutely like sculpture. You get a big lump
-                of clay, and you have to form it - this raw, unedited, very long footage." <br>
+                of clay, and you have to form it - this raw, unedited, very long footage." 
+            </p>
+
+            <p class="title-item">
                 - Thelma Schoonmaker
             </p>
-            <p>
+            
+            <!-- <p>
                 After spending over five years studying the art of the edit and all the intricacies that it comes with I
                 have been fortunate enough to begin a career in the industry. Working inside of Davinci Resolve
                 alongside powerhouse names and companies in the Influencer space such as Tru3Ta1ent, Simply History,
                 BearBubb, MoonzyCat, InTheBlack Media Consulting and other significant bodies, I am able to excel at the
                 editing, sound mixing and color grading stages to deliver you an edit you'll be proud of.
-            </p>
+            </p> -->
         </div>
 
         <iframe class="showreel profile col s12" src="https://www.youtube.com/embed/wGRme6fYDbw?controls=0"
