--- a/index.html
+++ b/index.html
@@ -20,25 +20,34 @@
 </head>
 
 <body style="background-color: #111;">
+    <nav id="navbar">
+        <div class="title">
+            <h1>DANNY SAVAGE</h1>
+            <h2>Edit | Color | Sound</h2>
+        </div>
+        <ul class="nav-list">
+            <li><a href="#showreel"> Showreel </a></li>
+            <li><a href="#skills"> Skills & Experence</a></li>
+            <li><a href="#client"> Client Work</a></li>
+        </ul>
+        <a href="https://twitter.com/EditorDannyS" target="_blank"><img class="icons" src="img/twitter-xxl.png"
+                alt="twitter icon"></img></a>
+        <a href="mailto:mrsavagework@gmail.com" target="_blank"><img class="icons" style="filter: brightness(0) invert(1);
+            " src="img/mail.png"
+                alt="twitter icon"></img></a>
+    </nav>
     <main class="master-container">
-        <header>
-            <div class="title">
-                <h1>DANNY SAVAGE</h1>
-                <h2>Edit | Color | Sound</h2>
-            </div>
-
-            <a href="https://twitter.com/EditorDannyS" target="_blank"><img id="twitter-icon" src="img/twitter-xxl.png"
-                    alt="twitter icon"></img></a>
-        </header>
-
-        <iframe class="showreel profile col s12" src="https://www.youtube.com/embed/qtsul9s11I8?controls=0"
-            title="Danny Savage Effect Reel" frameborder="0"
+        <iframe id="showreel" class="showreel profile col s12"
+            src="https://www.youtube.com/embed/qtsul9s11I8?controls=0" title="Danny Savage Effect Reel" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen>
         </iframe>
 
+
+
         <div class="features-text">
-            <h1 class="thin-title">SKILLS & EXPERIENCE</h1>
+            <hr>
+            <h1 class="thin-title scrollToOffset" id="skills">SKILLS & EXPERIENCE</h1>
 
             <ul id="list-left">
                 <li class="animate__animated">Full Edits</li>
@@ -59,49 +68,204 @@
             </ul>
         </div>
 
+
         <div class="client-area">
-            <h1 class="client-work thin-title">CLIENT WORK</h1>
+            <hr>
+            <h1 class="client-work thin-title scrollToOffset" id="client">CLIENT WORK</h1>
         </div>
 
 
-        <div class="video-grid">
-            <div class="row">
-                <div class="video-container col s6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/0fHKACcBI0w"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen>
-                    </iframe>
-                </div>
-
-                <div class="video-container col s6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/RQddWKQRDe4"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen>
-                    </iframe>
-                </div>
+        <div>
+            <div class="video-grid-text">
+                <h1><a href="https://www.youtube.com/c/Simplehistory"> Simple History LTD </a></h1>
+                <p>Simple History is a prominent animation channel that takes deep dives into the interesting side of
+                    historic events. <br><br> I have been a primary editor with Simple History for (at the time of
+                    writing) two months and have made many great stories that span decades.</p>
             </div>
 
-            <div class="row">
-                <div class="video-container col s6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/U4SjQazKxMk"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen>
-                    </iframe>
+
+            <div class="video-grid">
+                <div class="row">
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/H_U6bn_-JPA"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/rh5uLtZbBiY"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
 
-                <div class="video-container col s6">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/CZJmKbLXJYU"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen>
-                    </iframe>
+                <div class="row">
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Kna4eAeXgwY"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/l7ZruP5v5NA"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
             </div>
-
         </div>
+
+        <div>
+            <div class="video-grid-text">
+                <h1>Nimbus</h1>
+                <p>Nimbus is an LA based coffee house with a theme of potions and wizardry. <br><br> Nimbus was looking
+                    for a fresh take on their online presence and wanted to show their branding with creative edits.
+                </p>
+            </div>
+
+
+            <div class="video-grid">
+                <div class="row">
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/tXMZQCg1-_4"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/qs7TZvVaieE"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/iApB-V7RJxQ"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/qkgTjHbtXjo"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div>
+            <div class="video-grid-text">
+                <h1>Mr Bearbub</h1>
+                <p>BearBubb is a streamer who hosts his wacky weekly livestreams on Twitch. <br><br> Bearbubb reached
+                    out to me to edit for him for a short period to test the waters of a YouTube channel.</p>
+            </div>
+
+
+            <div class="video-grid">
+                <div class="row">
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/FKmgLpoj1KY"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/RQddWKQRDe4"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/KmgprkQ71bU"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/7qqapqIIn6A"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div>
+            <div class="video-grid-text">
+                <h1>After Effects Work</h1>
+                <p>This is a selection of one off client projects that largely used Motion Graphic/After Effects.</p>
+            </div>
+
+
+            <div class="video-grid">
+                <div class="row">
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/9kSVbgPlOXg"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/d9VDLaQmPgM"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+
+                <!-- <div class="row">
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/U4SjQazKxMk"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/CZJmKbLXJYU"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div> -->
+            </div>
+        </div>
+
     </main>
 
     <script src="js/jquery.js"></script>
