--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
         <div>
             <div class="video-grid-text">
-                <h1>Nimbus</h1>
+                <h1><a href="https://www.instagram.com/nimbus_coffee_la/">Nimbus</a></h1>
                 <p>Nimbus is an LA based coffee house with a theme of potions and wizardry. <br><br> Nimbus was looking
                     for a fresh take on their online presence and wanted to show their branding with creative edits.
                 </p>
@@ -174,7 +174,7 @@
 
         <div>
             <div class="video-grid-text">
-                <h1>Mr Bearbub</h1>
+                <h1><a href="https://www.twitch.tv/bearbubb">Bearbubb</a></h1>
                 <p>BearBubb is a streamer who hosts his wacky weekly livestreams on Twitch. <br><br> Bearbubb reached
                     out to me to edit for him for a short period to test the waters of a YouTube channel.</p>
             </div>
