--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body style="background-color: #111;">
     <nav id="navbar">
         <div class="title">
-            <h1>DANNY SAVAGE</h1>
+            <h1 style="font-family: Monstsrrat;">DANNY SAVAGE</h1>
             <h2>Edit | Color | Sound</h2>
         </div>
         <ul class="nav-list">
@@ -174,7 +174,7 @@
 
         <div>
             <div class="video-grid-text">
-                <h1><a href="https://www.twitch.tv/bearbubb">Bearbubb</a></h1>
+                <h1><a href="https://www.twitch.tv/bearbubb">BearBubb</a></h1>
                 <p>BearBubb is a streamer who hosts his wacky weekly livestreams on Twitch. <br><br> Bearbubb reached
                     out to me to edit for him for a short period to test the waters of a YouTube channel.</p>
             </div>
