--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <ul class="nav-list">
             <li><a href="#showreel"> Showreel </a></li>
-            <li><a href="#skills"> Skills & Experence</a></li>
+            <li><a href="#skills"> Skills & Experience</a></li>
             <li><a href="#client"> Client Work</a></li>
         </ul>
         <a href="https://twitter.com/EditorDannyS" target="_blank"><img class="icons" src="img/twitter-xxl.png"
