More web friendly

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
 
 
-        <div>
+        <div class="workarea">
             <div class="video-grid-text">
                 <h1><a href="https://www.youtube.com/c/Simplehistory"> Simple History LTD </a></h1>
                 <p>Simple History is a prominent animation channel that takes deep dives into the interesting side of
@@ -123,7 +123,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="workarea">
             <div class="video-grid-text">
                 <h1><a href="https://www.instagram.com/nimbus_coffee_la/">Nimbus</a></h1>
                 <p>Nimbus is an LA based coffee house with a theme of potions and wizardry. <br><br> Nimbus was looking
@@ -172,7 +172,7 @@
         </div>
 
 
-        <div>
+        <div class="workarea">
             <div class="video-grid-text">
                 <h1><a href="https://www.twitch.tv/bearbubb">BearBubb</a></h1>
                 <p>BearBubb is a streamer who hosts his wacky weekly livestreams on Twitch. <br><br> Bearbubb reached
@@ -220,7 +220,7 @@
         </div>
 
 
-        <div>
+        <div class="workarea">
             <div class="video-grid-text">
                 <h1>After Effects Work</h1>
                 <p>This is a selection of one off client projects that largely used Motion Graphic/After Effects.</p>
@@ -295,7 +295,7 @@
             mouseControls: true,
             touchControls: true,
             gyroControls: false,
-            minHeight: 1000.00,
+            minHeight: 4000.00,
             minWidth: 500.00,
             scale: 1.00,
             scaleMobile: 1.00,
