Fixed viewport scale

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="initial-scale=1.0, width=device-width"> -->
     <meta name="description" content="Freelance editor tailored to influencers. My work speaks for itself.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
     <title>Danny Savage</title>
 </head>
 
-<body style="background-color: #111;">
+<body style="background-color: #111; min-width: fit-content !important">
     <nav id="navbar">
         <div class="title">
             <h1 style="font-family: Monstsrrat;">DANNY SAVAGE</h1>
@@ -296,7 +296,7 @@
             touchControls: true,
             gyroControls: false,
             minHeight: 4000.00,
-            minWidth: 500.00,
+            minWidth: 100.00,
             scale: 1.00,
             scaleMobile: 1.00,
             color: 0x016c78,
