font fix small device

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="workarea">
             <div class="video-grid-text">
                 <h1><a href="https://www.youtube.com/c/Simplehistory"> Simple History LTD </a></h1>
-                <p>Simple History is a prominent animation channel that takes deep dives into the interesting side of
+                <p class="video-grid-paragraph">Simple History is a prominent animation channel that takes deep dives into the interesting side of
                     historic events. <br><br> I have been a primary editor with Simple History for (at the time of
                     writing) two months and have made many great stories that span decades.</p>
             </div>
@@ -126,7 +126,7 @@
         <div class="workarea">
             <div class="video-grid-text">
                 <h1><a href="https://www.instagram.com/nimbus_coffee_la/">Nimbus</a></h1>
-                <p>Nimbus is an LA based coffee house with a theme of potions and wizardry. <br><br> Nimbus was looking
+                <p class="video-grid-paragraph">Nimbus is an LA based coffee house with a theme of potions and wizardry. <br><br> Nimbus was looking
                     for a fresh take on their online presence and wanted to show their branding with creative edits.
                 </p>
             </div>
@@ -175,7 +175,7 @@
         <div class="workarea">
             <div class="video-grid-text">
                 <h1><a href="https://www.twitch.tv/bearbubb">BearBubb</a></h1>
-                <p>BearBubb is a streamer who hosts his wacky weekly livestreams on Twitch. <br><br> Bearbubb reached
+                <p class="video-grid-paragraph">BearBubb is a streamer who hosts his wacky weekly livestreams on Twitch. <br><br> Bearbubb reached
                     out to me to edit for him for a short period to test the waters of a YouTube channel.</p>
             </div>
 
@@ -223,7 +223,7 @@
         <div class="workarea">
             <div class="video-grid-text">
                 <h1>After Effects Work</h1>
-                <p>This is a selection of one off client projects that largely used Motion Graphic/After Effects.</p>
+                <p class="video-grid-paragraph">This is a selection of one off client projects that largely used Motion Graphic/After Effects.</p>
             </div>
 
 
