--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="initial-scale=1.0, width=device-width"> -->
     <meta name="description" content="Freelance editor tailored to influencers. My work speaks for itself.">
-
+    <meta name="viewport" content="width=device-width">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -15,11 +15,10 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/custom.css">
-    <link rel="stylesheet" href="whoah.css">
     <title>Danny Savage</title>
 </head>
 
-<body style="background-color: #111; min-width: fit-content !important">
+<body style="background-color:#111; min-width: fit-content !important">
     <nav id="navbar">
         <div class="title">
             <h1 style="font-family: Monstsrrat;">DANNY SAVAGE</h1>
@@ -33,8 +32,7 @@
         <a href="https://twitter.com/EditorDannyS" target="_blank"><img class="icons" src="img/twitter-xxl.png"
                 alt="twitter icon"></img></a>
         <a href="mailto:mrsavagework@gmail.com" target="_blank"><img class="icons" style="filter: brightness(0) invert(1);
-            " src="img/mail.png"
-                alt="twitter icon"></img></a>
+            " src="img/mail.png" alt="twitter icon"></img></a>
     </nav>
     <main class="master-container">
         <iframe id="showreel" class="showreel profile col s12"
@@ -42,8 +40,6 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen>
         </iframe>
-
-
 
         <div class="features-text">
             <hr>
@@ -68,21 +64,19 @@
             </ul>
         </div>
 
-
         <div class="client-area">
             <hr>
             <h1 class="client-work thin-title scrollToOffset" id="client">CLIENT WORK</h1>
         </div>
 
-
         <div class="workarea">
             <div class="video-grid-text">
                 <h1><a href="https://www.youtube.com/c/Simplehistory"> Simple History LTD </a></h1>
-                <p class="video-grid-paragraph">Simple History is a prominent animation channel that takes deep dives into the interesting side of
+                <p class="video-grid-paragraph">Simple History is a prominent animation channel that takes deep dives
+                    into the interesting side of
                     historic events. <br><br> I have been a primary editor with Simple History for (at the time of
                     writing) two months and have made many great stories that span decades.</p>
             </div>
-
 
             <div class="video-grid">
                 <div class="row">
@@ -126,11 +120,11 @@
         <div class="workarea">
             <div class="video-grid-text">
                 <h1><a href="https://www.instagram.com/nimbus_coffee_la/">Nimbus</a></h1>
-                <p class="video-grid-paragraph">Nimbus is an LA based coffee house with a theme of potions and wizardry. <br><br> Nimbus was looking
+                <p class="video-grid-paragraph">Nimbus is an LA based coffee house with a theme of potions and wizardry.
+                    <br><br> Nimbus was looking
                     for a fresh take on their online presence and wanted to show their branding with creative edits.
                 </p>
             </div>
-
 
             <div class="video-grid">
                 <div class="row">
@@ -171,12 +165,13 @@
             </div>
         </div>
 
-
         <div class="workarea">
             <div class="video-grid-text">
                 <h1><a href="https://www.twitch.tv/bearbubb">BearBubb</a></h1>
-                <p class="video-grid-paragraph">BearBubb is a streamer who hosts his wacky weekly livestreams on Twitch. <br><br> Bearbubb reached
-                    out to me to edit for him for a short period to test the waters of a YouTube channel.</p>
+                <p class="video-grid-paragraph">BearBubb is a streamer who hosts his wacky weekly livestreams on Twitch.
+                    <br><br> Bearbubb reached
+                    out to me to edit for him for a short period to test the waters of a YouTube channel.
+                </p>
             </div>
 
 
@@ -219,11 +214,11 @@
             </div>
         </div>
 
-
         <div class="workarea">
             <div class="video-grid-text">
                 <h1>After Effects Work</h1>
-                <p class="video-grid-paragraph">This is a selection of one off client projects that largely used Motion Graphic/After Effects.</p>
+                <p class="video-grid-paragraph">This is a selection of one off client projects that largely used Motion
+                    Graphic/After Effects.</p>
             </div>
 
 
@@ -246,23 +241,6 @@
                     </div>
                 </div>
 
-                <!-- <div class="row">
-                    <div class="video-container col s6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/U4SjQazKxMk"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen>
-                        </iframe>
-                    </div>
-
-                    <div class="video-container col s6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/CZJmKbLXJYU"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen>
-                        </iframe>
-                    </div>
-                </div> -->
             </div>
         </div>
 
@@ -271,38 +249,6 @@
     <script src="js/jquery.js"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/custom.js"></script>
-
-    <!-- <script src="js/three.min.js"></script> -->
-    <!-- <script src="js/vanta.dots.min.js"></script> -->
-    <!-- <script>
-        VANTA.DOTS({
-          el: "body",
-          mouseControls: true,
-          touchControls: true,
-          gyroControls: true,
-          minHeight: 400.00,
-          minWidth: 200.00,
-          scale: 1.20,
-          scaleMobile: 1.00
-        })
-        </script> -->
-
-    <script src="js/p5.min.js"></script>
-    <script src="js/vanta.topology.min.js"></script>
-    <script>
-        VANTA.TOPOLOGY({
-            el: "body",
-            mouseControls: true,
-            touchControls: true,
-            gyroControls: false,
-            minHeight: 5000.00,
-            minWidth: 100.00,
-            scale: 1.00,
-            scaleMobile: 1.00,
-            color: 0x016c78,
-            backgroundColor: 0x111111
-        })
-    </script>
 </body>
 
 </html>
