--- a/index.html
+++ b/index.html
@@ -64,7 +64,19 @@
             </ul>
         </div>
 
-        <div class="client-area">
+        <div class="client-area brand-integration-area">
+            <hr>
+            <h1 class="client-work thin-title scrollToOffset" id="client" style="margin-bottom:5vmin;">BRAND INTEGRATIONS</h1>
+            <ul class="brands">
+                <li><a href="https://uk.manscaped.com/"><img style="margin-top:5vmin;" src="img/brands/man.png" alt=""></a></li>
+                <li><a href="https://raidshadowlegends.com/"></a><img style="margin-top:2vmin;" src="img/brands/pia.png" alt=""></a></li>
+                <li><a href="https://www.privateinternetaccess.com/"></a><img src="img/brands/raid.png" alt=""></a></li>
+            </ul>
+        </div>
+
+        
+
+        <div class="client-area" style="margin-top: 26vmin">
             <hr>
             <h1 class="client-work thin-title scrollToOffset" id="client">CLIENT WORK</h1>
         </div>
@@ -81,7 +93,7 @@
             <div class="video-grid">
                 <div class="row">
                     <div class="video-container col s6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/H_U6bn_-JPA"
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/I2IrHwIB9m8"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
@@ -89,7 +101,7 @@
                     </div>
 
                     <div class="video-container col s6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/rh5uLtZbBiY"
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZTZFGVL5fs4"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
@@ -99,7 +111,7 @@
 
                 <div class="row">
                     <div class="video-container col s6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Kna4eAeXgwY"
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Bt37jLvF5Ug"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
@@ -107,7 +119,7 @@
                     </div>
 
                     <div class="video-container col s6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/l7ZruP5v5NA"
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/coqmaPilyGg"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
@@ -167,18 +179,15 @@
 
         <div class="workarea">
             <div class="video-grid-text">
-                <h1><a href="https://www.twitch.tv/bearbubb">BearBubb</a></h1>
-                <p class="video-grid-paragraph">BearBubb is a streamer who hosts his wacky weekly livestreams on Twitch.
-                    <br><br> Bearbubb reached
-                    out to me to edit for him for a short period to test the waters of a YouTube channel.
+                <h1><a href="https://www.youtube.com/c/TheMiseryMachine">Misery Machine</a></h1>
+                <p class="video-grid-paragraph">Drew and Yergy run a true crime storytelling channel that uploads a bone chilling episode once per week. <br><br> I was brought on as their primary editor to enhance their videos and make them more immersive to the viewer through the use of SFX, color grading and motion graphics.
                 </p>
             </div>
-
 
             <div class="video-grid">
                 <div class="row">
                     <div class="video-container col s6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/FKmgLpoj1KY"
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/DJnygRRdfX0"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
@@ -186,7 +195,7 @@
                     </div>
 
                     <div class="video-container col s6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/RQddWKQRDe4"
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/h15su2JW3hA"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
@@ -194,23 +203,6 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="video-container col s6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/KmgprkQ71bU"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen>
-                        </iframe>
-                    </div>
-
-                    <div class="video-container col s6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/7qqapqIIn6A"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen>
-                        </iframe>
-                    </div>
-                </div>
             </div>
         </div>
 
