Removed "Travel" & "3D". Added new Misery Machine videos.

--- a/index.html
+++ b/index.html
@@ -51,14 +51,12 @@
                 <li class="animate__animated">Sound Mixing</li>
                 <li class="animate__animated">VFX</li>
                 <li class="animate__animated">Motion Graphics</li>
-                <li class="animate__animated">3D</li>
             </ul>
 
             <ul id="list-right">
                 <li class="animate__animated">Gaming</li>
                 <li class="animate__animated">Vlog</li>
                 <li class="animate__animated">Video Essay</li>
-                <li class="animate__animated">Travel</li>
                 <li class="animate__animated">Corporate</li>
                 <li class="animate__animated">Commercial</li>
             </ul>
@@ -187,7 +185,7 @@
             <div class="video-grid">
                 <div class="row">
                     <div class="video-container col s6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/DJnygRRdfX0"
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/watch?v=MJassS7OOS4"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
@@ -203,8 +201,26 @@
                     </div>
                 </div>
 
+                <div class="row">
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/watch?v=6zzqd9ysOYI"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+
+                    <div class="video-container col s6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/watch?v=MY9WSKvTCn0"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+
             </div>
-        </div>
+        </div>   
 
         <div class="workarea">
             <div class="video-grid-text">
@@ -212,7 +228,6 @@
                 <p class="video-grid-paragraph">This is a selection of one off client projects that largely used Motion
                     Graphic/After Effects.</p>
             </div>
-
 
             <div class="video-grid">
                 <div class="row">
