--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="video-grid">
                 <div class="row">
                     <div class="video-container col s6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/watch?v=MJassS7OOS4"
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/MJassS7OOS4"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
@@ -203,7 +203,7 @@
 
                 <div class="row">
                     <div class="video-container col s6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/watch?v=6zzqd9ysOYI"
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/6zzqd9ysOYI"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
@@ -211,7 +211,7 @@
                     </div>
 
                     <div class="video-container col s6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/watch?v=MY9WSKvTCn0"
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/MY9WSKvTCn0"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
